mobile side Nav is functional and getting styled

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -52,6 +52,7 @@
     <!-- Compiled and minified Materialize Javascript -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
+    <script src="sideNav.js" charset="utf-8"></script>
   </body>
 
 </html>
