changed title and reseeded admin pw

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,12 +19,12 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 
-    <title>Innervate</title>
+    <title>NPI</title>
 </head>
 
 <body>
     <div id="root"></div>
-  
+
 
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <!-- Compiled and minified Materialize Javascript -->
